--- a/package.json
+++ b/package.json
@@ -15,15 +15,11 @@
   "dependencies": {
     "@nuxt/typescript-build": "^1.0.3",
     "@nuxt/typescript-runtime": "latest",
-    "@nuxtjs/vuetify": "^1.11.2",
     "cross-env": "^7.0.2",
-    "epic-spinners": "^1.1.0",
     "node-sass": "^4.14.1",
     "nuxt": "latest",
-    "portal-vue": "^2.1.7",
     "sass-loader": "^8.0.2",
-    "stylelint": "^13.5.0",
-    "vuetify": "^2.3.0"
+    "stylelint": "^13.5.0"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config-typescript": "^2.0.0",
